AC_INIT([tcpfwd],[1.0])

AC_LANG(C)
AC_PROG_CC_C99

AC_CHECK_HEADERS([stdio.h])
AC_CHECK_HEADERS([fcntl.h])
AC_CHECK_HEADERS([errno.h])
AC_CHECK_HEADERS([ctype.h])
AC_CHECK_HEADERS([signal.h])
AC_CHECK_HEADERS([unistd.h])
AC_CHECK_HEADERS([stdarg.h])
AC_CHECK_HEADERS([stdlib.h])
AC_CHECK_HEADERS([string.h])
AC_CHECK_HEADERS([stdint.h])
AC_CHECK_HEADERS([sys/socket.h])
AC_CHECK_HEADERS([arpa/inet.h])
AC_CHECK_HEADERS([netinet/ip.h])

AC_TYPE_SIZE_T

AC_CONFIG_HEADERS(config.h)
AC_CONFIG_FILES([makefile])
AC_OUTPUT
